# TSCM

./: .gitignore  README.md  pyproject.toml
data/: DataSets.xlsx
data/solutions/: dp.csv  greedy.csv  mip.csv  mip_paper.csv  random.csv
notebooks/: 1_baselines.ipynb  2_mip.ipynb  3_dp.ipynb  4_compare.ipynb
src/: utils.py
src/data/: problem.py  solution.py
src/solvers/: base_solver.py  dp_solver.py  greedy_solver.py  mip_solver.py  random_solver.py
