[tool.poetry]
name = "tscm"
version = "0.1.0"
description = ""
authors = ["Trubin <trybin420@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" },]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ipykernel = "^6.29.5"
numpy = "^2.1.1"
pandas = "^2.2.3"
scipy = "^1.14.1"
openpyxl = "^3.1.5"
seaborn = "^0.13.2"
mip = "^1.15.0"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
